--- a/.github/workflows/msbuild-main.yml
+++ b/.github/workflows/msbuild-main.yml
@@ -14,6 +14,6 @@ jobs:
       configuration: "Release"
       maxCpu: 8
       clean: true
-      msbuildArguments: ""
+      msbuildArguments: "/t:Clean"
       createLogFile: true
       logFileVerbosity: "detailed"
