--- a/.github/workflows/msbuild-main.yml
+++ b/.github/workflows/msbuild-main.yml
@@ -13,7 +13,7 @@ jobs:
       platform: "Any CPU"
       configuration: "Release"
       maxCpu: 8
-      clean: true
+      clean: false
       msbuildArguments: "/t:Clean"
       createLogFile: true
       logFileVerbosity: "detailed"
