--- a/.github/workflows/combined-reusable-Dotnet-NVM.yml
+++ b/.github/workflows/combined-reusable-Dotnet-NVM.yml
@@ -111,6 +111,7 @@ jobs:
       - name: Run dotnet ${{ inputs.command }}
         shell: bash
         run: |
+          pwd
           Get-ChildItem -Path . -Recurse -Filter *.csproj
           if [[ "${{ inputs.command }}" == "restore" ]]; then
             dotnet restore "${{ inputs.projects }}" \
