--- a/.github/workflows/combined-reusable-Dotnet-NVM.yml
+++ b/.github/workflows/combined-reusable-Dotnet-NVM.yml
@@ -111,6 +111,7 @@ jobs:
       - name: Run dotnet ${{ inputs.command }}
         shell: bash
         run: |
+          dotnet restore './.csprojFile/myproject.csproj'
           if [[ "${{ inputs.command }}" == "restore" ]]; then
             dotnet restore "${{ inputs.projects }}" \
               --configfile "${{ inputs.nugetConfigPath }}" \
