--- a/.github/workflows/Main-Dotnet-NVM.yml
+++ b/.github/workflows/Main-Dotnet-NVM.yml
@@ -12,7 +12,7 @@ jobs:
     with:
       command: restore
       #projects: '**/*.csproj'
-      projects: './.csprojfile/myproject.csproj'
+      projects: './csprojfile/myproject.csproj'
       nugetConfigPath: 'NuGet.config'
       arguments: ''
       packagesToPack: ''
