--- a/.github/workflows/Main-Dotnet-NVM.yml
+++ b/.github/workflows/Main-Dotnet-NVM.yml
@@ -11,8 +11,8 @@ jobs:
     uses: ./.github/workflows/combined-reusable-Dotnet-NVM.yml
     with:
       command: restore
-      #projects: '**/*.csproj'
-      projects: './src/OrchardCore.Cms.Web/OrchardCore.Cms.Web.csproj'
+      projects: '**/*.csproj'
+      #projects: './src/OrchardCore.Cms.Web/OrchardCore.Cms.Web.csproj'
       nugetConfigPath: 'NuGet.config'
       arguments: ''
       packagesToPack: ''
