--- a/.github/workflows/Main-Dotnet-NVM.yml
+++ b/.github/workflows/Main-Dotnet-NVM.yml
@@ -10,9 +10,9 @@ jobs:
   restore-build-test:
     uses: ./.github/workflows/combined-reusable-Dotnet-NVM.yml
     with:
-      command: restore
-      projects: '**/*.csproj'
-      #projects: './src/OrchardCore.Cms.Web/OrchardCore.Cms.Web.csproj'
+      command: build
+      #projects: '**/*.csproj'
+      projects: './src/OrchardCore.Cms.Web/OrchardCore.Cms.Web.csproj'
       nugetConfigPath: 'NuGet.config'
       arguments: ''
       packagesToPack: ''
