--- a/.github/workflows/combined-reusable-Dotnet-NVM.yml
+++ b/.github/workflows/combined-reusable-Dotnet-NVM.yml
@@ -84,6 +84,11 @@ on:
       workingDirectory:
         required: true
         type: string
+        # Use Nodes Version
+      version:
+        required: true
+        type: string
+        
  
 jobs:
   dotnet:
@@ -136,3 +141,59 @@ jobs:
               --property "Version=$VERSION;SensitiveAlphanumericInfo3=${{ inputs.sensitiveAlphanumericInfo1 }};${{ inputs.buildProperties }}" \
               --verbosity "${{ inputs.verbosityPack }}"
           fi
+
+      - name: Download NVM for Windows installer
+        run: |
+          Invoke-WebRequest https://github.com/coreybutler/nvm-windows/releases/download/1.2.2/nvm-noinstall.zip -OutFile nvm-noinstall.zip
+          Expand-Archive -Path "nvm-noinstall.zip" -DestinationPath "C:\nvm" -Force
+          Copy-Item "$PWD/settings.txt" "C:\nvm\settings.txt" -Force
+
+      - name: Set Environment Variables for NVM
+        run: |
+          echo "NVM_HOME=C:\nvm" >> $env:GITHUB_ENV
+          echo "NVM_SYMLINK=C:\nvm\nodejs" >> $env:GITHUB_ENV
+          echo "PATH=C:\nvm;C:\nvm\nodejs;$env:PATH" >> $env:GITHUB_ENV   
+
+      - name: Install Predefined Node Versions
+        run: |
+          C:\nvm\nvm.exe install 18.20.4
+          C:\nvm\nvm.exe install 18.19.1
+          C:\nvm\nvm.exe install 18.20.1
+          C:\nvm\nvm.exe install 16.13.0
+          C:\nvm\nvm.exe install 16.13.1
+          C:\nvm\nvm.exe install 16.16.0
+
+      - name: Check and Switch to Existing NVM Version
+        shell: powershell
+        run: |
+          $version = "${{ inputs.version }}".Trim()
+          if (-not $version) { 
+            Write-Error "Input version is empty. Please provide a valid Node.js version."
+            exit 1
+          }
+
+          $normalized = $version.TrimStart('v')
+          $installed = & nvm list | ForEach-Object {
+            ($_ -replace '[*>\s]', '').TrimStart('v')
+          } | Where-Object { $_ -match '^\d+\.\d+\.\d+$' }
+
+          Write-Host "Installed versions:"
+          $installed | ForEach-Object { Write-Host " - $_" }
+
+          $matches = if ($normalized -like '*`*') {
+            $prefix = $normalized.TrimEnd('*')
+            $installed | Where-Object { $_ -like "$prefix*" }
+          } else {
+            $installed | Where-Object { $_ -eq $normalized }
+          }
+
+          if (-not $matches) {
+            Write-Error "No installed Node.js version matches: $version"
+            exit 1
+          }
+
+          $selected = $matches | Sort-Object -Descending | Select-Object -First 1
+          Write-Host "Using Node.js version: $selected"
+
+          nvm use $selected
+          Write-Host "Node.js version in use: $(node -v)"   
