--- a/.github/workflows/combined-reusable-Dotnet-NVM.yml
+++ b/.github/workflows/combined-reusable-Dotnet-NVM.yml
@@ -288,21 +288,27 @@ jobs:
 
       - name: Run NPM or Custom Command
         working-directory: ${{ inputs.workingDir }}
-        run: |  
-          if "${{ inputs.command }}"=="custom" (   
-            if "${{ inputs.customCommand }}"=="" (   
-              echo Error: customCommand input is required when command is "custom"
-              exit 1
-            ) else (   
-              echo Running Custom Command: ${{ inputs.customCommand }}
-              npm ${{ inputs.customCommand }}
+        run: |
+          if "${{ inputs.command }}"=="install" "${{ inputs.command }}"=="publish" "${{ inputs.command }}"=="custom" (
+            if "${{ inputs.command }}"=="custom" (
+              if "${{ inputs.customCommand }}"=="" (
+                echo Error: customCommand input is required when command is "custom"
+                exit 1
+              ) else (
+                echo Running Custom Command: ${{ inputs.customCommand }}
+                npm ${{ inputs.customCommand }}
+              )
+            ) else if "${{ inputs.verbose }}"=="true" (
+              echo Running npm ${{ inputs.command }} --verbose
+              npm ${{ inputs.command }} --verbose
+            ) else (
+              echo Running npm ${{ inputs.command }}
+              npm ${{ inputs.command }}
             )
-          ) else if "${{ inputs.verbose }}"=="true" (   
-            echo Running npm ${{ inputs.command }} --verbose
-            npm ${{ inputs.command }} --verbose
-          ) else (   
-            echo Running npm ${{ inputs.command }}
-            npm ${{ inputs.command }}
+            echo Node.js Version : && node -v
+          ) else (
+            echo Error: Unsupported command. Only "install", "publish", or "custom" are allowed.
+            exit 1
           )
-          echo Node.js Version : && node -v
         shell: cmd
+
