--- a/.github/workflows/combined-reusable-Dotnet-NVM.yml
+++ b/.github/workflows/combined-reusable-Dotnet-NVM.yml
@@ -218,45 +218,41 @@ jobs:
       - name: Install Dependencies
         working-directory: ${{ inputs.workingDir }}
         run: npm install
-        shell: powershell
+        shell: cmd
 
       - name: Configure Custom Registry
         if: ${{ inputs.customRegistry != '' }}
         working-directory: ${{ inputs.workingDir }}
         run: |
-          $registry = '${{ inputs.customRegistry }}'
-          "registry=$registry" | Out-File -FilePath .npmrc -Encoding utf8 -Append
-        shell: powershell
+          echo registry=${{ inputs.customRegistry }} >> .npmrc
+        shell: cmd
 
       - name: Run NPM or Custom Command
         working-directory: ${{ inputs.workingDir }}
-        shell: powershell
+        shell: cmd
         run: |
-          $cmd = '${{ inputs.npmcommand }}'
-          $verbose = '${{ inputs.verbose }}'
-          $custom = '${{ inputs.customCommand }}'
-       
-          if ($cmd -in @('install', 'publish', 'custom')) {
-            if ($cmd -eq 'custom') {
-              if ([string]::IsNullOrEmpty($custom)) {
-                Write-Error "Error: customCommand input is required when command is 'custom'"
-                exit 1
-              } else {
-                Write-Host "Running Custom Command: $custom"
-                npm $custom
-              }
-            } elseif ($verbose -eq 'true') {
-              Write-Host "Running npm $cmd --verbose"
-              npm $cmd --verbose
-            } else {
-              Write-Host "Running npm $cmd"
-              npm $cmd
-            }
-       
-            Write-Host "Node.js Version:"
-            node -v
-          } else {
-            Write-Error "Error: Unsupported command '$cmd'. Only 'install', 'publish', or 'custom' are allowed."
-            exit 1
-          }
+          if "${{ inputs.npmcommand }}"=="custom" (
+            if "${{ inputs.customCommand }}"=="" (
+              echo Error: customCommand input is required when command is "custom"
+              exit 1
+            ) else (
+              if "${{ inputs.verbose }}"=="true" (
+                echo Running Custom Command: ${{ inputs.customCommand }} --verbose
+                npm ${{ inputs.customCommand }} --verbose
+              ) else (
+                echo Running Custom Command: ${{ inputs.customCommand }}
+                npm ${{ inputs.customCommand }}
+              )
+            )
+          ) else (
+            if "${{ inputs.verbose }}"=="true" (
+              echo Running npm ${{ inputs.npmcommand }} --verbose
+              npm ${{ inputs.npmcommand }} --verbose
+            ) else (
+              echo Running npm ${{ inputs.npmcommand }}
+              npm ${{ inputs.npmcommand }}
+            )
+          )
+          echo Node.js Version After : && node -v
+          shell: cmd
 
