--- a/.github/workflows/copy-files.yml
+++ b/.github/workflows/copy-files.yml
@@ -9,9 +9,9 @@ jobs:
   copy-files-job:
     uses: ./.github/workflows/reusable-copy-files.yaml
     with:
-      SourceFolder: scripts
-      TargetFolder: templates
-      contents: '*.ps1'
+      SourceFolder: ./sourcefolder
+      TargetFolder: ./targetFolder
+      contents: '*.txt'
       CleanTargetFolder: true
       OverWrite: true
       FlattenFolders: false
