--- a/.github/workflows/reusable-copy-files.yaml
+++ b/.github/workflows/reusable-copy-files.yaml
@@ -133,19 +133,19 @@ jobs:
           exit 0
         shell: pwsh
     
-      # - name: List Files in Target Folder
-      #   run: |
-      #     try {
-      #       $target = Join-Path -Path "${{ github.workspace }}" -ChildPath "${{ inputs.TargetFolder }}"
-      #       Write-Host "Listing files in target folder: $target"
-      #       Get-ChildItem -Path $target -Recurse | ForEach-Object {
-      #         Write-Host $_.FullName
-      #       }
-      #     } catch {
-      #       Write-Error "An error occurred while listing files in the target folder: $_"
-      #       exit 1
-      #     }
-      #   shell: pwsh
+      - name: List Files in Target Folder
+        run: |
+             try {
+               $target = Join-Path -Path "${{ github.workspace }}" -ChildPath "${{ inputs.TargetFolder }}"
+               Write-Host "Listing files in target folder: $target"
+               Get-ChildItem -Path $target -Recurse | ForEach-Object {
+                 Write-Host $_.FullName
+               }
+             } catch {
+               Write-Error "An error occurred while listing files in the target folder: $_"
+               exit 1
+             }
+        shell: pwsh
 
       - name: List Files in Target Folder
         run: |
