--- a/.github/workflows/copy-files.yml
+++ b/.github/workflows/copy-files.yml
@@ -14,4 +14,4 @@ jobs:
       contents: '*.txt'
       CleanTargetFolder: true
       OverWrite: true
-      FlattenFolders: false
+      FlattenFolders: true
