--- a/.github/workflows/copy-files.yml
+++ b/.github/workflows/copy-files.yml
@@ -13,5 +13,5 @@ jobs:
       TargetFolder: targetFolder
       contents: '*.txt'
       CleanTargetFolder: true
-      OverWrite: true
+      OverWrite: false
       FlattenFolders: true
