--- a/.github/workflows/reusable-copy-files.yaml
+++ b/.github/workflows/reusable-copy-files.yaml
@@ -92,6 +92,8 @@ jobs:
             Write-Host "Source Path: $source"
             Write-Host "Target Path: $target"
             Write-Host "Contents to Copy: $contents"
+            Write-Host "overwrite : $overwrite"
+            Write-Host "flatten : $flatten"
 
             # Ensure target folder exists
             if (-not (Test-Path -Path $target)) {
@@ -102,14 +104,10 @@ jobs:
             # Copy files based on minimatch pattern
             Get-ChildItem -Path $source -Recurse -Include $contents | ForEach-Object {
                $sourceFile= $_.FullName
-               #Write-Host "Over All Source File : $sourceFile "
-               Write-Host "Flatten value: $flatten"
-               Write-Host "Flatten type: $($flatten.GetType().Name)"
               if ($flatten) {
                 $destination = Join-Path -Path $target -ChildPath $_.Name
                 Write-Host "Inisde Flatten : $destination "
               } else {
-                Write-Host "not in flatten folder inisde else "
                 $relativePath = $_.FullName.Substring($source.Length).TrimStart('\', '/')
                 $destination = Join-Path -Path $target -ChildPath $relativePath
               }
