--- a/.github/workflows/reusable-copy-files.yaml
+++ b/.github/workflows/reusable-copy-files.yaml
@@ -137,6 +137,21 @@ jobs:
           # Explicitly set exit code to 0 if no errors occurred
           exit 0
         shell: pwsh
+
+
+      -  name: List Files in Target Folder
+         run: |
+           try {
+             $target = Join-Path -Path "${{ github.workspace }}" -ChildPath "${{ inputs.TargetFolder }}"
+             Write-Host "Listing files in target folder: $target"
+             Get-ChildItem -Path $target -Recurse | ForEach-Object {
+               Write-Host " File Name : $_.FullName"
+             }
+           } catch {
+             Write-Error "An error occurred while listing files in the target folder: $_"
+             exit 1
+           }
+         shell: pwsh
   
 
       - name: List Files in Target Folder
