--- a/.github/workflows/npm-reusable-workflow.yml
+++ b/.github/workflows/npm-reusable-workflow.yml
@@ -49,7 +49,9 @@ jobs:
      run:
        working-directory: ${{ inputs.workingDir }}
     steps:
-    
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        
       - name: NPM Task Header
         run: |
             # Task Header
