--- a/.github/workflows/npm-copy-combined.yml
+++ b/.github/workflows/npm-copy-combined.yml
@@ -12,7 +12,8 @@ jobs:
     steps:
       # Step 1: Execute the call-reusable reusable workflow
       - name: Run NPM Task
-        uses: ./.github/workflows/npm-reusable-workflow.yml
+        #uses: ./.github/workflows/npm-reusable-workflow.yml
+        uses: Prakasha3007/NUGET-/.github/workflows/npm-reusable-workflow.yml@main
         with:
           runsOn: self-hosted
           command: "custom"
@@ -27,7 +28,8 @@ jobs:
     steps:
       # Step 1: Execute the V2-Copy-Files reusable workflow
       - name: Copy Files
-        uses: ./.github/workflows/copy-reusable-workflow.yml
+        #uses: ./.github/workflows/copy-reusable-workflow.yml
+        uses: Prakasha3007/NUGET-/.github/workflows/copy-reusable-workflow.yml@main
         with:
           SourceFolder: sourcefolder
           contents: '*.txt'
