--- a/.github/workflows/npm-copy-combined.yml
+++ b/.github/workflows/npm-copy-combined.yml
@@ -12,7 +12,7 @@ jobs:
     with:
       runsOn: self-hosted
       command: "custom"
-      workingDir: "."
+      workingDir: "./npm-scripts"
       verbose: true
       customCommand: "run build:fonts"
       customRegistry: "https://registry.npmjs.org/"
