--- a/.github/workflows/npm-reusable-workflow.yml
+++ b/.github/workflows/npm-reusable-workflow.yml
@@ -49,8 +49,8 @@ jobs:
      run:
        working-directory: ${{ inputs.workingDir }}
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      #- name: Checkout Code
+        #uses: actions/checkout@v4
         
       - name: NPM Task Header
         run: |
