--- a/.github/workflows/npm-reusable-workflow.yml
+++ b/.github/workflows/npm-reusable-workflow.yml
@@ -50,8 +50,12 @@ jobs:
        working-directory: ${{ inputs.workingDir }}
     steps:
 
-      - name: Before Checkout Verify npm List
-        run: npm list --depth=0
+      # Use npm list to check dependencies
+      - name: Check installed dependencies
+        shell: pwsh
+        run: |
+          $dependencies = npm list --depth=0
+          Write-Host $dependencies
         
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -59,7 +63,7 @@ jobs:
           clean: false
           
       - name: After Checkout Verify npm List
-        run: npm list --depth=0    
+        run: npm list
         
       - name: NPM Task Header
         run: |
