--- a/.github/workflows/npm-reusable-workflow.yml
+++ b/.github/workflows/npm-reusable-workflow.yml
@@ -54,6 +54,7 @@ jobs:
         run: |
           Write-Host "Before Checkout"
           npm list --depth=0
+        continue-on-error: true
                     
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -65,6 +66,7 @@ jobs:
         run: |
           Write-Host "After Checkout"
           npm list --depth=0
+        continue-on-error: true
         
       - name: NPM Task Header
         run: |
