--- a/.github/workflows/npm-copy-combined.yml
+++ b/.github/workflows/npm-copy-combined.yml
@@ -7,8 +7,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  Checkout:
-    uses: actions/checkout@v4
+  build:
+    runs-on: self-hosted
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
   call-NPM-install-reusable:
     uses: ./.github/workflows/npm-reusable-workflow.yml
     with:
