--- a/.github/workflows/npm-copy-combined.yml
+++ b/.github/workflows/npm-copy-combined.yml
@@ -1,34 +1,29 @@
-name: Main Workflow with Two Jobs
-
 on:
   push:
     branches:
       - main
   workflow_dispatch:
-
+ 
 jobs:
   build:
     runs-on: self-hosted
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-  call-NPM-install-reusable:
-    uses: ./.github/workflows/npm-reusable-workflow.yml
-    with:
-      runsOn: self-hosted
-      command: "install"
-      workingDir: "./npm-scripts"
-      verbose: true
-      customCommand: "run build:fonts"
-      customRegistry: "https://registry.npmjs.org/"
-
-  call-npm-build-reusable:
-    needs: call-NPM-install-reusable
-    uses: ./.github/workflows/npm-reusable-workflow.yml
-    with:
-      runsOn: self-hosted
-      command: "custom"
-      workingDir: "./npm-scripts"
-      verbose: true
-      customCommand: "run build:fonts"
-      customRegistry: "https://registry.npmjs.org/"
+ 
+      - name: NPM Install
+        uses: ./.github/workflows/npm-reusable-workflow.yml
+        with:
+          command: "install"
+          workingDir: "./npm-scripts"
+          verbose: true
+          customRegistry: "https://registry.npmjs.org/"
+ 
+      - name: NPM Build Fonts
+        uses: ./.github/workflows/npm-reusable-workflow.yml
+        with:
+          command: "custom"
+          workingDir: "./npm-scripts"
+          verbose: true
+          customCommand: "run build:fonts"
+          customRegistry: "https://registry.npmjs.org/"
