--- a/.github/workflows/npm-copy-combined.yml
+++ b/.github/workflows/npm-copy-combined.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4
  
       - name: NPM Install
-        uses: ./.github/workflows/npm-reusable-workflow.yml
+        uses: ./.github/actions/npm-runner
         with:
           command: "install"
           workingDir: "./npm-scripts"
@@ -20,7 +20,7 @@ jobs:
           customRegistry: "https://registry.npmjs.org/"
  
       - name: NPM Build Fonts
-        uses: ./.github/workflows/npm-reusable-workflow.yml
+        uses: ./.github/actions/npm-runner
         with:
           command: "custom"
           workingDir: "./npm-scripts"
