--- a/.github/workflows/npm-copy-combined.yml
+++ b/.github/workflows/npm-copy-combined.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+        with:
+         sparse-checkout: 'npm-scripts'
  
       - name: NPM Install
         uses: ./.github/actions/npm-actions
